cmake_minimum_required(VERSION 3.15)

project(PokemonGame LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(pokemon_game
    main.cpp
    src/Pokemon.cpp
    src/Moves.cpp
)

target_include_directories(pokemon_game PRIVATE src)
